Updates: . Config websocket . Integrate notification response between be and fe . Finish comment and create post notification in real time . Add notifications page, specific page in fe *TODO: implement addFriend features: add friend request notification, accept the request notification